--- a/training-report.html
+++ b/training-report.html
@@ -411,13 +411,14 @@
    */
   function getAllDimensions() {
     // Gets a list of all indicators' and program indicators' names and IDs
+    const filter = "Training";
 
-    // TODO: ADjust filter (maybe even refactor)
+    // TODO: Refactor for easier manipulation
     return Promise.all([
       $.get(
-        "../api/programIndicators.json?filter=displayName:like:DSA&paging=false"
+        `../api/programIndicators.json?filter=displayName:like:${filter}&paging=false`
       ),
-      $.get("../api/indicators.json?filter=displayName:like:DSA&paging=false"),
+      $.get(`../api/indicators.json?filter=displayName:like:${filter}&paging=false`),
     ]).then((values) => {
       const [{ programIndicators }, { indicators }] = values;
       const allDimensions = [...programIndicators, ...indicators];
@@ -850,10 +851,10 @@
     const encodedUri = encodeURI(csvContent);
     const link = document.createElement("a");
     link.setAttribute("href", encodedUri);
-    link.setAttribute("download", "dsa_report.csv");
+    link.setAttribute("download", "training_report.csv");
     window.frameElement.parentNode.appendChild(link); // Bypasses chrome sandboxed iframe restrictions
 
-    link.click(); // This will download the data file named "dsa_report.csv".
+    link.click(); // This will download the data file named "training_report.csv".
   }
 
   /**
@@ -1025,7 +1026,7 @@
 
 <div class="p-1">
   <!-- HTML Markup to make up report -->
-  <h1>DSA Summary</h1>
+  <h1>Training Summary</h1>
 
   <div class="mb-2">
     <div class="d-inline-block dropdown dropright">
