Constrain left column size

--- a/training-report.html
+++ b/training-report.html
@@ -49,6 +49,11 @@
     border-spacing: 0;
   }
 
+  /* Constrain column size */
+  thead th:first-child {
+    width: 60%;
+  }
+
   /* Table header color & stripe */
   thead th {
     background: white;
