Fix some row names

--- a/training-report.html
+++ b/training-report.html
@@ -204,12 +204,12 @@
       ]
     },
     {
-      name: "Total people trained",
+      name: "Total people trained (disaggregated to roles and geographic area)",
       type: rowTypes.DATA,
       cells: [null, null, null],
     },
     {
-      name: "Total people trained",
+      name: "Health care providers providing morbidity management who received raining on morbidity management (LF: Lymphoedema, Hydrocele; Trachoma: Trichiasis)",
       type: rowTypes.DATA,
       cells: [null, null, null],
     },
@@ -300,7 +300,6 @@
       ]
     },
     {
-      // TODO: tidy up these names
       name: "People trained in mmdp care: Lymphoedema management",
       type: rowTypes.DATA,
       cells: [
